# olostep-py

./: .gitignore  README.md  pyproject.toml  pytest.ini  todo.txt
.github/actions/setup-poetry/: action.yml
.github/workflows/: ci.yml  release.yml
design_docs/: python.mdx
docs/: architecture.md  error_handling.md  quickstart_async.md  quickstart_sync.md  retry_strategy.md
olostep/: OFFER.md  __init__.py  _log.py  api_endpoints.py  config.py  errors.py  retry_strategy.py
olostep/backend/: api_endpoints.py  caller.py  transport.py  transport_protocol.py  validation.py
olostep/clients/: async_client.py  sync_client.py
olostep/frontend/: _id_storage.py  answers_menu.py  batch_menu.py  client_state.py  crawl_menu.py  input_coersion.py  retrieve_menu.py  scrape_menu.py  searches_menu.py  sitemap_menu.py
olostep/frontend/typed_dict/: sdk.py  types.py
olostep/models/: base.py  common.py  request.py  response.py
tests/: conftest.py  run_tests.py
tests/api_contracts/as_is/: test_answers_endpoint_contracts.py  test_batch_endpoint_contracts.py  test_crawl_endpoint_contracts.py  test_general_endpoint_contracts.py  test_map_endpoint_contracts.py  test_retrieve_endpoint_contracts.py  test_scrape_endpoint_contracts.py  test_searches_endpoint_contracts.py
tests/api_contracts/as_should_be/: test_existing_api_bugs.py
tests/docs_commands/features/answers/: test_answers_docs_commands.py
tests/docs_commands/features/batches/: test_batches_docs_commands.py
tests/docs_commands/features/crawls/: test_crawls_docs_commands.py
tests/docs_commands/features/maps/: test_maps_docs_commands.py
tests/docs_commands/features/scrape/: test_scrapes_docs_commands.py
tests/docs_commands/features/searches/: test_searches_docs_commands.py
tests/fixtures/api/requests/: answers.py  batch.py  crawl.py  map.py  retrieve.py  scrape.py  searches.py
tests/fixtures/api/responses/: answers.py  batch.py  crawl.py  map.py  scrape.py  searches.py
tests/integration/: test_async_client_api.py  test_sync_client_api.py
tests/self_tests/: test_hacker_news_fixtures.py  test_invalid_key_raises_auth_failed.py  test_logging_simple.py  test_package_imports.py
tests/stubs/: fake_transport.py  test_server.py
tests/unit/backend/: test_caller.py  test_transport.py
tests/unit/client/: test_async_client.py
tests/unit/frontend/: test_menu.py  test_searches_state.py  test_state.py
tests/unit/models/: test_country.py  test_searches.py
