[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "olostep"
version = "0.11.0"
description = "Olostep Python SDK - Programmatic access to the web"
authors = ["Olostep Team <team@olostep.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://www.olostep.com"
repository = "https://github.com/olostep-api/olostep-py"
documentation = "https://docs.olostep.com"
keywords = ["web-scraping", "api", "sdk", "crawling", "data-extraction", "ai", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
]
packages = [{include = "olostep"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
httpx = {extras = ["http2"], version = "^0.28.1"}
pydantic = "^2.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"
hypothesis = "^6.100.0"
black = "^25.1.0"
ruff = "^0.12.7"
python-dotenv = "^1.1.1"
bpython = "^0.25"
pytest-order = "^1.3.0"
pytest-xdist = {extras = ["psutil"], version = "^3.8.0"}


[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293', 'E501']
line-length = 88
target-version = "py311"
